# islands

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: Config.toml
src/: args.rs  count_islands.rs  error.rs  lib.rs  main.rs  non_empty_rect_list_2d.rs  shared_consts.rs  visited_world.rs  world.rs
src/args/: unit_tests.rs
src/count_islands/: unit_tests.rs
src/error/: arg.rs  io.rs  non_empty_rect_list_2d.rs  world_map.rs
src/error/io/: wrapped_std_io.rs
src/non_empty_rect_list_2d/: unit_tests.rs
src/non_empty_rect_list_2d/unit_tests/: cols_rows.rs  get.rs  new.rs  set.rs
src/shared_consts/: cli_arg_from.rs  cli_arg_into.rs  msg.rs
src/shared_consts/msg/: en_us.rs
src/visited_world/: unit_tests.rs
src/visited_world/unit_tests/: cols_rows.rs  is_unvisited_land.rs  visit_contiguous_land.rs
src/world/: terrain.rs  unit_tests.rs
src/world/unit_tests/: cols_rows.rs  get.rs  is_land.rs  new.rs  set.rs
