[package]
authors = ["Brad Gibson <b2b@humanenginuity.com>"]
categories = []
description = "<describe crate here>"
edition = "2021"
keywords = []
license = "MIT OR Apache-2.0"
name = "islands"
readme = "README.md"
repository = "https://github.com/u007d/islands"
version = "0.1.0"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
assert_matches = "1.5.0"
bool_ext = "0.5.3"
he_std = { git = "ssh://github/u007d/he_std.git", branch = "main" }
termination = "0.1.2"
thiserror = "1.0.38"

[dev-dependencies]
assert2 = "0.3.7"

[profile.dev]
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
